# airbnb-clone-backend

./: db.sqlite3  oop.py  pyproject.toml
bookings/: models.py  serializer.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py  0003_alter_booking_check_out.py  0004_booking_experience_end_booking_experience_start.py
categories/: models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py  serializer.py  urls.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py
medias/: admin.py  models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py
reviews/: admin.py  models.py  serializers.py
reviews/migrations/: 0001_initial.py  0002_alter_reviews_rating.py  0003_alter_reviews_experience_alter_reviews_room_and_more.py
rooms/: admin.py  models.py  serializer.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_initial.py  0004_alter_amenity_options.py  (+3 more)
users/: admin.py  models.py  urls.py  views.py
wishlists/: models.py  serializer.py  views.py
(+6 files in other folders)
